# nullptr

./: .clang-format  .gitconfig  .gitignore  CMakeLists.txt  Dependencies.cmake  Makefile  ProjectOptions.cmake  README.md  README_docker.md  conanfile.txt  slideshow.odp
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmarks.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
src/: CMakeLists.txt
src/linked_list/: CMakeLists.txt  main.cpp
src/linked_list/include/: doublelist.hpp
src/linked_list_library/: CMakeLists.txt
src/linked_list_library/include/: doublelist.hpp
src/pointers_library/: CMakeLists.txt  pointers_library.cpp
src/pointers_library/include/: CMakeLists.txt  pointers.hpp
src/pointers_library/include/marcpawl/pointers/: borrower.hpp  details.hpp  exception.hpp  maybe_null.hpp  nonowner.hpp  owner.hpp  pointers.hpp  ptr.hpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
test/pointers_test/: CMakeLists.txt  borrower_must_be_pointer.cpp  borrower_not_null_tests.cpp  borrower_tests.cpp  exception_tests.cpp  hierarchy.hpp  maybe_null_tests.cpp  not_null_tests.cpp  owner_not_null_tests.cpp  owner_tests.cpp
test/pointers_test/fail/: CMakeLists.txt  borrower_must_be_pointer.cpp  borrower_not_deletable.cpp  borrower_not_null_default_constructor.cpp  borrower_not_null_default_contstructor.cpp  borrower_not_null_nullptr_constructor.cpp  maybe_null_deprecated.cpp  maybe_null_must_be_pointer.cpp  maybe_null_visit_bad_not_null_handler.cpp  maybe_null_visit_bad_nullptr_handler.cpp  owner_cannot_create_from_borrower.cpp
